syntax = "proto3";
package health_service;

service HealthService {
  rpc CheckHealth(HealthRequest) returns (HealthResponse);
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
}